--- a/.travis.yml
+++ b/.travis.yml
@@ -23,3 +23,17 @@ after_success:
   - docker push andreluzz/multi-server
   - docker push andreluzz/multi-worker
 
+deploy:
+  provider: elasticbeanstalk
+  region: us-east-1
+  app: multi-docker
+  env: MultiDocker-env
+  bucket_name: elasticbeanstalk-us-east-1-563319661021
+  bucket_path: docker-multi
+  on:
+    branch: master
+  access_key_id:
+    secure: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: $AWS_SECRET_KEY
+    
